--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,6 +21,7 @@
 
 h1 {
   font-size: 50px;
+  font-family: 'Oleo Script', cursive;
 }
 
 h2 {
@@ -38,33 +39,4 @@ h2 {
 .right-nav {
   display:flex;
   justify-content: space-around;
-}
-
-
-.cards {
-  display:flex;
-  justify-content:center;
-}
-
-
-.instagram-media {
-  margin-right:5%;
-}
-
-
-.cards-text-principal {
-  display:flex;
-  justify-content: space-between;
-}
-
-
-.cards-textbox {
-  width : 40%;
-  height : 700px;
-  margin: 0% 5%;
-  padding : 3% 5% ;
-  background-color: white;
-  box-shadow: -10px 5px 5px rgba(128,128,128,0.1);
-  border-radius : 40px;
-  border: solid rgba(128,128,128,0.05) ;
 }
