--- a/app/views/trends/new.html.erb
+++ b/app/views/trends/new.html.erb
@@ -1,5 +1,24 @@
-<h1>New Trend</h1>
+<div class="navbar">
+  <h1>ReelsTracker</h1>
+
+  <p class="navbar-text float-right">
+    <% if user_signed_in? %>
+      Logged in as <strong><%= current_user.email %></strong>.
+      <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+      <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+    <% else %>
+      <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
+      <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+    <% end %>
+  </p>
+
+  <div class="right-nav">
+    <p><%= link_to 'Back', trends_path %></p>
+  </div>
+</div>
+
+
+
+<h2>New Trend</h2>
 
 <%= render 'form', trend: @trend %>
-
-<%= link_to 'Back', trends_path %>
